deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground-deployment
  labels:
    app: playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playground
  template:
    metadata:
      labels:
        app: playground
    spec:
      containers:
      - name: playground
        image: wil42/playground:v1
        ports:
          - containerPort: 8888
        imagePullPolicy: Always
      #   volumeMounts:
      #   - name: website-cm-volume
      #     mountPath: /usr/share/nginx/html
      # volumes:
      # - name: website-cm-volume 
      #   configMap:
      #     name: website-cm
