service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: argocdrocks
  name: website-service
spec:
  type: ClusterIP
  selector:
    app: argocdrocks
  ports:
      - port: 80
        targetPort: 8080
  # ports:
  # - name: http
  #   port: 80
  #   protocol: TCP
  #   targetPort: 80
